<resources>

    <!-- # Activity and App Titles # -->

    <string name="app_name">Fiestas del Pilar 2015</string>

    <!-- # Image Descriptions # -->

    <string name="row_event_image_description">event image</string>
    <string name="main_image_description_ofrenda">offering image</string>
    <string name="main_image_description_events">events image</string>
    <string name="main_image_description_locations">locations image</string>
    <string name="main_image_description_categories">category image</string>
    <string name="grid_category_image_description">category image</string>

    <!-- # Buttons Text # -->

    <string name="main_ofrenda">Offering</string>
    <string name="main_events">Events</string>
    <string name="main_locations">Locations</string>
    <string name="main_categories">Categories</string>
    <string name="cancel">Cancel</string>
    <string name="menu_map">Map</string>
    <string name="go_back">Go back</string>

    <!-- # Text for TextViews or Empty Lists # -->

    <string name="price_free">Free</string>
    <string name="tab_all_title">All</string>
    <string name="tab_childhood_title">Childhood</string>
    <string name="tab_youth_title">Youth</string>
    <string name="empty">We\'re loading all the data related to the Fiestas del Pilar events.\n\n
    This is done only once and after this point you can disconnect WiFi if you wish.</string>
    <string name="date_until">"Until "</string>
    <string name="detail_event_title_date">Date and time</string>
    <string name="detail_event_title_description">Description</string>
    <string name="detail_event_title_location">Location</string>
    <string name="detail_event_title_price">Price</string>
    <string name="detail_event_title_other">Other data</string>
    <string name="places_details_text">See events</string>
    <string name="detail_text_location_email">"Email: "</string>
    <string name="detail_text_location_telephone">"Telephone: "</string>
    <string name="detail_text_category">"Event\'s category: "</string>
    <string name="detail_text_hour">"Schedule: "</string>
    <string name="detail_text_other_web">"Web: "</string>
    <string name="menu_action_share">Share event</string>
    <string name="share_chooser_title">Share event with&#8230;</string>

    <string name="tab_favorites_title">Favorites</string>
    <string name="empty_favorites">You don\'t have any favorite event.\n\n
    Mark an event as favorite to show it here.</string>

</resources>
